Rename 'vendor/' AMD paths to remove vendor base path.

--- a/examples/animation/single.html
+++ b/examples/animation/single.html
@@ -13,8 +13,8 @@
     function initialize() {
       require.setStrategy('gmaps')
       require([
-        'vendor/jquery',
-        'vendor/underscore',
+        'jquery',
+        'underscore',
         'examples/animation/script/controls',
         'ai/maps/map',
         'ai/maps/layers/googleroadmap',
