--- a/examples/geocode/index.html
+++ b/examples/geocode/index.html
@@ -86,7 +86,7 @@
       require([
         'ai/maps/map',
         'ai/maps/layers/googleroadmap',
-        'vendor/jquery',
+        'jquery',
         'ai/geocode/mapquestgeocodeservice',
         'ai/geocode/googlegeocodeservice',
         'ai/maps/infobox'
