--- a/examples/marker/single.html
+++ b/examples/marker/single.html
@@ -22,7 +22,7 @@
       require([
         'aeris/util',
         'aeris/config',
-        'vendor/jquery',
+        'jquery',
         'ai/maps/map',
         'ai/maps/marker'
       ], function(_, config, $, Map, Marker) {
