--- a/examples/radar/animated/gmaps/index.html
+++ b/examples/radar/animated/gmaps/index.html
@@ -13,7 +13,7 @@
         require([
           'ai/maps/gmaps',
           'ai/maps/animations/aerisinteractivetile',
-          'vendor/underscore'
+          'underscore'
         ], function(aeris, AIAnimation, _) {
           window._ = _;
           window.map = new aeris.maps.gmaps.Map("map-canvas", {
