Rename AMD path 'strategy/' to 'ai/maps/strategy/'

--- a/examples/infowindow/gmaps/index.html
+++ b/examples/infowindow/gmaps/index.html
@@ -12,7 +12,7 @@
     require.config({
       map: {
         '*': {
-          strategy: 'aeris/maps/gmaps'
+          'ai/maps/strategy': 'aeris/maps/gmaps'
         }
       }
     });
