--- a/examples/infowindow/openlayers/index.html
+++ b/examples/infowindow/openlayers/index.html
@@ -13,7 +13,7 @@
     var require = {
       map: {
         '*': {
-          strategy: 'aeris/maps/openlayers'
+          'ai/maps/strategy': 'aeris/maps/openlayers'
         }
       }
     };
