User RequireJS as bower component

--- a/examples/appbuilder/routes.html
+++ b/examples/appbuilder/routes.html
@@ -21,7 +21,7 @@
     }
   </style>
 
-  <script type="text/javascript" src="../../externals/require.js" data-main="../initialize"></script>
+  <script type="text/javascript" src="../../bower_components/requirejs/require.js" data-main="../initialize"></script>
   <script type="text/javascript">
     function initialize() {
       require.setStrategy('gmaps');
