--- a/examples/appbuilder/maps.html
+++ b/examples/appbuilder/maps.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="theme/default/css/style.css"/>
 
-  <script type="text/javascript" src="../../externals/require.js" data-main="../initialize"></script>
+  <script type="text/javascript" src="../../bower_components/requirejs/require.js" data-main="../initialize"></script>
 
   <script type="text/javascript">
     function logArgs(args) {
