--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -4,7 +4,7 @@
   <title>Aeris JS API - Jasmine Spec Runner</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png"/>
   <link rel="stylesheet" type="text/css" href="lib/jasmine.css">
-  <script src="../externals/require.js" data-main="SpecRunner"></script>
+  <script src="../bower_components/requirejs/require.js" data-main="SpecRunner"></script>
 </head>
 <body>
 </body>
