Minor: example css- controls zIndex

--- a/examples/animation/single.html
+++ b/examples/animation/single.html
@@ -113,9 +113,11 @@
     animation.pause();
   });
   $('#prev').click(function() {
+    animation.pause();
     animation.previous();
   });
   $('#next').click(function() {
+    animation.pause();
     animation.next();
   });
 </script>
