Examples -- include jQuery for example scripts

--- a/examples/appbuilder/maps.html
+++ b/examples/appbuilder/maps.html
@@ -33,6 +33,11 @@
 
   <script type="text/javascript" src="../apikeys.js"></script>
   <script type="text/javascript" src="../../build/packages/mapapp.js"></script>
+  <!--
+    Note that it is not required to load the Google Maps library when
+    using the MapBuilder -- it will load the library for you, using the
+    apiKey set in the MapBuilder config.
+  -->
 
   <script type="text/javascript">
     aeris.MapBuilder({
