Naming: AerisInteractiveTile --> AerisTile

--- a/examples/animation/single.html
+++ b/examples/animation/single.html
@@ -24,7 +24,7 @@
   <h2>Aeris Interactive</h2>
 
   <p>
-    Any <a href="http://www.hamweather.com/support/documentation/aeris/interactive-tiles/" target="_blank">Aeris Interactive tile</a> can be animated using the <code>aeris.maps.animations.AerisInteractiveTile</code> object. Animations work by rapidly showing and hiding tile layers associated with a specific date. It is also possible to animate several tiles layers along the same timeline using the <code>aeris.maps.animations.AnimationSync</code> object. See the <a href="sync.html">Animation Sync example.</a>
+    Any <a href="http://www.hamweather.com/support/documentation/aeris/interactive-tiles/" target="_blank">Aeris Interactive tile</a> can be animated using the <code>aeris.maps.animations.AerisinteractiveTile</code> object. Animations work by rapidly showing and hiding tile layers associated with a specific date. It is also possible to animate several tiles layers along the same timeline using the <code>aeris.maps.animations.AnimationSync</code> object. See the <a href="sync.html">Animation Sync example.</a>
   </p>
 </div>
 
@@ -51,7 +51,7 @@
   });
 
   // Create an animation "wrapper" around the satellite layer.
-  var animation = new aeris.maps.animations.AerisInteractiveTile(radar);
+  var animation = new aeris.maps.animations.AerisinteractiveTile(radar);
 
   radar.setMap(map);
 
