Naming: Fix Filters namespace

--- a/examples/markercollection/index.html
+++ b/examples/markercollection/index.html
@@ -184,7 +184,7 @@
           // Use the 'OR' operator in order
           // to show more than one type of marker
           // at a time.
-          operator: aeris.api.Filter.OR
+          operator: aeris.api.params.models.Filter.OR
         });
       }
       else {
