Naming: Remove 'Aeris' prefix from layers

--- a/examples/animation/single.html
+++ b/examples/animation/single.html
@@ -45,7 +45,7 @@
 
 <script type="text/javascript">
   var map = new aeris.maps.Map('map-canvas');
-  var radar = new aeris.maps.layers.AerisRadar({
+  var radar = new aeris.maps.layers.Radar({
     apiId: apiKeys.aeris.id,
     apiSecret: apiKeys.aeris.secret
   });
