--- a/examples/animation/sync.html
+++ b/examples/animation/sync.html
@@ -60,11 +60,11 @@
     zoom: 5,
     center: [40, -95]
   });
-  var radar = new aeris.maps.layers.AerisRadar({
+  var radar = new aeris.maps.layers.Radar({
     apiId: apiKeys.aeris.id,
     apiSecret: apiKeys.aeris.secret
   });
-  var satellite = new aeris.maps.layers.AerisSatellite({
+  var satellite = new aeris.maps.layers.Satellite({
     apiId: apiKeys.aeris.id,
     apiSecret: apiKeys.aeris.secret
   });
