--- a/examples/layers/multi.html
+++ b/examples/layers/multi.html
@@ -136,7 +136,7 @@
   function initializeLayerControls() {
     var layerData = [
       {
-        className: 'AerisAdvisories',
+        className: 'Advisories',
         label: 'Advisories'
       },
       {
@@ -148,62 +148,62 @@
         opacity: false
       },
       {
-        className: 'AerisChlorophyll',
+        className: 'Chlorophyll',
         label: 'Cholorophyll'
       },
       {
-        className: 'AerisConvectiveHazards',
+        className: 'ConvectiveHazards',
         label: 'Convective',
 
         // Convective layers do not support setting zIndex
         zIndex: false
       },
       {
-        className: 'AerisDewPoints',
+        className: 'DewPoints',
         label: 'Dewpoints'
       },
       {
-        className: 'AerisHeatIndex',
+        className: 'HeatIndex',
         label: 'Heat Index'
       },
       {
-        className: 'AerisHumidity',
+        className: 'Humidity',
         label: 'Humidity'
       },
       {
-        className: 'AerisRadar',
+        className: 'Radar',
         label: 'Radar'
       },
       {
-        className: 'AerisSatellite',
+        className: 'Satellite',
         label: 'Infrared Satellite'
       },
       {
-        className: 'AerisSatelliteGlobal',
+        className: 'SatelliteGlobal',
         label: 'Global Infrared Satellite'
       },
       {
-        className: 'AerisSatelliteVisible',
+        className: 'SatelliteVisible',
         label: 'Visible Satellite'
       },
       {
-        className: 'AerisSeaSurfaceTemps',
+        className: 'SeaSurfaceTemps',
         label: 'Sea Surface Temps'
       },
       {
-        className: 'AerisSnowDepth',
+        className: 'SnowDepth',
         label: 'Snow Depth'
       },
       {
-        className: 'AerisTemps',
+        className: 'Temps',
         label: 'Temperature'
       },
       {
-        className: 'AerisWindChill',
+        className: 'WindChill',
         label: 'Wind Chil'
       },
       {
-        className: 'AerisWinds',
+        className: 'Winds',
         label: 'Wind Strength'
       }
     ]
