--- a/examples/layers/single.html
+++ b/examples/layers/single.html
@@ -41,7 +41,7 @@
 
   <script type="text/javascript">
     var map = new aeris.maps.Map('map-canvas');
-    var satellite = new aeris.maps.layers.AerisSatelliteGlobal({
+    var satellite = new aeris.maps.layers.SatelliteGlobal({
       apiId: apiKeys.aeris.id,
       apiSecret: apiKeys.aeris.secret
     });
