Namine: Rename animations.AerisInteractiveTile to animations.TileAnimation

--- a/examples/animation/sync.html
+++ b/examples/animation/sync.html
@@ -70,11 +70,11 @@
   });
 
   // Create individual animation objects
-  var radarAnimation = new aeris.maps.animations.AerisinteractiveTile(radar, {
+  var radarAnimation = new aeris.maps.animations.TileAnimation(radar, {
     // Limit the number of layers to load
     limit: 20
   });
-  var satelliteAnimation = new aeris.maps.animations.AerisinteractiveTile(satellite, {
+  var satelliteAnimation = new aeris.maps.animations.TileAnimation(satellite, {
     limit: 20
   });
 
