Naming: plural namespaces
- caught some which were previously missed

--- a/examples/markercollection/index.html
+++ b/examples/markercollection/index.html
@@ -127,7 +127,7 @@
 
     // The StormReportMarkers object is a type
     // of PointDataMarkerCollection, which is bound to
-    // an aeris.api.collection.StormReports object.
+    // an aeris.api.collections.StormReports object.
     var stormMarkers = new aeris.maps.StormReportMarkers();
     stormMarkers.setMap(map);
 
