Naming: Move Marker to maps.markers namespace

--- a/examples/geoservice/geocode.html
+++ b/examples/geoservice/geocode.html
@@ -56,7 +56,7 @@
 
     // Create our map objects, so they are
     // ready to render
-    var marker = new aeris.maps.Marker();
+    var marker = new aeris.maps.markers.Marker();
     var infoBox = new aeris.maps.InfoBox();
 
     $('#geocode').click(function() {
