--- a/examples/geoservice/geolocate.html
+++ b/examples/geoservice/geolocate.html
@@ -71,7 +71,7 @@
 
           // Create a marker on the map
           // where the user is located.
-          var marker = new aeris.maps.Marker({
+          var marker = new aeris.maps.markers.Marker({
             position: position.latLon
           });
           var infoBox = new aeris.maps.InfoBox({
