Naming: Fix AdvisoriesKML references

--- a/examples/layers/multi.html
+++ b/examples/layers/multi.html
@@ -140,7 +140,7 @@
         label: 'Advisories'
       },
       {
-        className: 'AerisAdvisoriesKML',
+        className: 'AdvisoriesKML',
         label: 'Advisories (KML)',
 
         // KML layers do not support setting zIndex or opacity
