Naming: fix references to markercolletion objects

--- a/examples/markercollections/index.html
+++ b/examples/markercollections/index.html
@@ -128,7 +128,7 @@
     // The StormReportMarkers object is a type
     // of PointDataMarkerCollection, which is bound to
     // an aeris.api.collections.StormReports object.
-    var stormMarkers = new aeris.maps.StormReportMarkers();
+    var stormMarkers = new aeris.maps.markercollections.StormReportMarkers();
     stormMarkers.setMap(map);
 
 
