api.Operator static class

--- a/examples/markercollections/index.html
+++ b/examples/markercollections/index.html
@@ -181,7 +181,7 @@
           // which are, for example, either 'snow' or 'rain'.
           // Using the 'AND' operator in this case would only return
           // reports which are both 'snow' and 'rain'.
-          operator: aeris.api.params.models.Filter.OR
+          operator: aeris.api.Operator.OR
         });
       }
       else {
